# swarm-isolation-sim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: default.yaml
data/research/: multi_run_report.txt  research_report.txt
data/results/: sweep_ratio_sweep_full.json  sweep_ratio_sweep_per_generation.csv  sweep_ratio_sweep_per_run.csv  sweep_ratio_sweep_summary.csv  sweep_ratio_sweep_table.tex
data/results/ratio_sweep/: sweep_ratio_sweep_full.json  sweep_ratio_sweep_per_generation.csv  sweep_ratio_sweep_per_run.csv  sweep_ratio_sweep_summary.csv  sweep_ratio_sweep_summary.json  sweep_ratio_sweep_table.tex
data/results/ratio_sweep_30/: sweep_ratio_sweep_full.json  sweep_ratio_sweep_per_generation.csv  sweep_ratio_sweep_per_run.csv  sweep_ratio_sweep_summary.csv  sweep_ratio_sweep_summary.json  (+1 more)
data/sweep/: sweep_ratio_sweep_summary.json
docs/: bugfix_comparison_analysis.docx
scripts/: diagnose_results.py  run_all_experiments.sh  run_simulation.py  run_tests.py
swarm_sim/: __init__.py
swarm_sim/agents/: __init__.py  agent.py  bayesian.py  genome.py  interaction.py  neural.py  policy.py
swarm_sim/analysis/: __init__.py  pub_visualization.py  stats_analysis.py
swarm_sim/core/: __init__.py  config.py  environment.py  world.py
swarm_sim/evolution/: __init__.py  evolution.py
swarm_sim/experiments/: __init__.py  extended.py  isolation.py  research.py
swarm_sim/utils/: __init__.py  batch_logger.py  data_collector.py  pub_visualization.py  visualization.py
tests/: conftest.py  test_environment.py
(+6 files in other folders)
